feat: revamp the launch target editor page